--- a/pom.xml
+++ b/pom.xml
@@ -46,5 +46,32 @@
 
         </dependency>
 
+        <dependency>
+
+            <groupId>de.theamychan.scoreboard</groupId>
+
+            <artifactId>ScoreboardAPI</artifactId>
+
+            <version>1.3</version>
+
+            <scope>system</scope>
+
+            <systemPath>${project.basedir}/lib/ScoreboardAPI-1.3.jar</systemPath>
+
+        </dependency>
+
+        <dependency>
+
+            <groupId>gt.creeperface.nukkit.scoreboardapi</groupId>
+
+            <artifactId>ScoreboardAPI</artifactId>
+
+            <version>1.4</version>
+
+            <scope>system</scope>
+
+            <systemPath>${project.basedir}/lib/ScoreboardAPI-1.4(creeperface).jar</systemPath>
+
+        </dependency>
     </dependencies>
 </project>
